--- a/swiper.html
+++ b/swiper.html
@@ -35,6 +35,8 @@
 	</script>
     <script>
 	    swiperCarousel();
+	    // swiper各种效果和源码
+	    // http://idangero.us/swiper/demos/#.Vt_yD9J94dV  
   	</script>
 </body>
 </html>
