--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 		        <li class="text-over-hide">罗莱床品、3000积分达标即抢！</li>
 		    </ul>
 		</div>
+		<div id="wrapper">
+		    <div class="scroll">
+		       这个区域可以滑动
+		       这个区域可以滑动
+		       这个区域可以滑动
+		       这个区域可以滑动
+		       这个区域可以滑动
+		    </div>
+		</div>
 	</div>
 	<div class="footer">this id footer</div>
 	<div id="load-more" class="load-more"><img src="images/circle.gif" width="32" height="32"/></div>
@@ -71,6 +80,7 @@
 	<script src="js/datePicker.js"></script>
 	<script src="js/aliyun-oss-sdk-4.4.4.min.js"></script>
 	<script src="js/aliyun-oss-main.js"></script>
+	<script src="js/iscroll.js"></script>
 	<script type="text/javascript">
 
 		// JSON.parse();//字符串转换为json
@@ -80,6 +90,15 @@
 		// $(document).attr("title","test title");//设置title
 		// window.location.href=redirectUrl;//页面重定向
 		// window.location.replace(redirectUrl);//销毁当前页面后重定向 
+
+		// 第一参数必需是滑动元素的父元素的id。
+		// hScroll: true, 左右滑动，默认为true
+		// vScroll: true,上下滑动
+		// hScrollbar: true, 是否显示y轴滚动条，默认为显示
+		// vScrollbar: true,是否显示X轴滚动条，默认为显示
+
+		var Scroll = new iScroll('wrapper',{hScroll:true,vScroll:false,hScrollbar:false, vScrollbar:false});
+
 
 		function WebSocketTest(this_outOrderNo){
 			var websocket = null;
